# Pipecat-server-bern

./: .env.example  .gitignore  API_ADD_DEVICES.md  AUDIO_ENHANCEMENT_COMPLETE.md  ELEVENLABS_INTEGRATION_COMPLETE.md  ESP32_AUTH_API_DOCUMENTATION.md  FIREBASE_SETUP_GUIDE.md  IMPLEMENTATION_COMPLETE.md  README.md  debug_firebase.py  esp32_client_example.ino  esp32_webrtc_server.py  firebase_auth_server.py  mock_firebase.py  quick_start.sh  requirements.txt  simple_requirements.txt  simple_test_client.html  simple_webrtc_server.py  start_server.sh  test_add_devices.py  test_auth_server.py  test_elevenlabs_integration.py  test_firebase_auth.py  test_prompt_service.py  test_server.py  test_story_completion.py  web_test_client.html
server/: .env.example  README.md  bot.py  bot_https.py  comprehensive_test.py  local_users.json  pyproject.toml  requirements.txt  run_server.py  run_server.py.backup  setup.py  simple_bot.py  simple_test.py  test_api.py  test_endpoints.py  test_server.py
server/api/: conversations.py  enhanced_users.py  episodes.py
server/config/: __init__.py  settings.py
server/models/: __init__.py  auth_models.py  conversation.py  enhanced_user.py  episode_prompt.py  system_prompt.py  user.py
server/routes/: __init__.py  auth.py  prompts.py  users.py
server/services/: __init__.py  auth_service.py  conversation_service.py  enhanced_user_service.py  episode_prompt_service.py  firebase_service.py  firebase_service_new.py  prompt_service.py  user_service.py
server/static/: test.html
server/utils/: __init__.py  exceptions.py  logger.py  validators.py
(+7 files in other folders)
